[gd_scene load_steps=9 format=3 uid="uid://pmuu7pwnjj81"]

[ext_resource type="Texture2D" uid="uid://4cyisqkgls4u" path="res://assets/enemy_bullet_02.png" id="1_4p83r"]
[ext_resource type="Script" path="res://projectiles/enemy_projectiles/enemy_bullet_02.gd" id="1_eygcb"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="3_2mabc"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="4_n2ey8"]
[ext_resource type="Script" path="res://components/time_to_live_component.gd" id="5_aa3sp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rfif6"]
atlas = ExtResource("1_4p83r")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_50sgb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfif6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nif2q"]
size = Vector2(4, 4)

[node name="EnemyBullet02" type="Node2D"]
script = ExtResource("1_eygcb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_50sgb")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_2mabc")
sprite = NodePath("../AnimatedSprite2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-5.96046e-08, 0)
scale = Vector2(0.4, 0.4)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("4_n2ey8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_nif2q")

[node name="TimeToLiveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_aa3sp")
actor = NodePath("..")
